Fix mistakes when invoking static methods